--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt --use-mirrors
+  - pip install mock
 # command to run tests
 script: nosetests tests/*
